rustwasm/how_to_button_on_click/target/release/build/anyhow-344357bb5b56506a/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/jupiter/rust/WebAssemblyMan/rustwasm/how_to_button_on_click/target/release/build/anyhow-344357bb5b56506a/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
